# rust-rocket-diesel

./: Cargo.toml  Makefile  Rocket.toml
migrations/2024-01-12-145347_create_user/: down.sql  up.sql
migrations/2024-01-12-150404_create_enums/: down.sql  up.sql
migrations/2024-01-12-164527_create_workouts/: down.sql  up.sql
migrations/2024-01-13-020536_create_refs/: up.sql
migrations/2024-01-13-020948_create_new_ref/: up.sql
migrations/2024-01-15-174600_create_exercises/: down.sql  up.sql
migrations/2024-01-15-174848_create_extras/: down.sql  up.sql
migrations/2024-01-15-175234_create_extra_refs/: up.sql
migrations/2024-01-16-113106_create_roles_user_roles/: down.sql  up.sql
migrations/2024-01-16-114419_create_refs_for_roles/: up.sql
src/: auth.rs  lib.rs  main.rs  schema.rs
src/models/: credentials.rs  enums_types.rs  exercise.rs  mod.rs  muscle_group.rs  plan_workout.rs  roles.rs  user_profile.rs  user_roles.rs  users.rs  workout.rs  workout_plan.rs
src/repositories/: exercise.rs  mod.rs  muscle_groups.rs  plan_workout.rs  roles.rs  user_profile.rs  users.rs  workout.rs  workout_plan.rs
src/rocket_routes/: exercise_routes.rs  mod.rs  muscle_group_routes.rs  plan_workout_routes.rs  role_routes.rs  user_profile_routes.rs  users_routes.rs  workout_plan_routes.rs  workout_routes.rs
src/routes/: authorization.rs  exercise_routes.rs  mod.rs  muscle_group_routes.rs  plan_workout_routes.rs  role_routes.rs  user_profile_routes.rs  users_routes.rs  workout_plan_routes.rs  workout_routes.rs
tests/: authorization.rs  users.rs
(+1 files in other folders)
